up to date with dev

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             }
         }
     </script>
-  <script type="module" crossorigin src="/assets/main-CseUHZT9.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/main-Bf2mR_E6.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-u3h6oT5a.css">
+  <script type="module" crossorigin src="/assets/main-CaDMfebs.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/main-CoNwrKo_.js">
+  <link rel="stylesheet" crossorigin href="/assets/main-DMlsEHts.css">
 </head>
 
 <body>
