--- a/projects.html
+++ b/projects.html
@@ -6,8 +6,8 @@
     <title>Kizovani - Projects</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <script type="module" crossorigin src="/assets/main-Bf2mR_E6.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/main-u3h6oT5a.css">
+  <script type="module" crossorigin src="/assets/main-CoNwrKo_.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/main-DMlsEHts.css">
 </head>
 <body>
     
