--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,8 @@
     <link type="text/css" rel="stylesheet" href="main.css">
 </head>
 <body>
+
+    <canvas id="background-canvas"></canvas>
     
     <div class="welcome-text-container">
         <span class="welcome-text">MY PROJECTS</span>
@@ -64,5 +66,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script type="module" src="/main.js"></script>
+    <script type='module' src="backround_monster.js"></script>
 </body>
 </html>
