up to date with dev

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!-- TODO: FIGURE OUT PHOTO STORAGE??? -->
+ <!-- epilepsy warning? -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -14,9 +15,9 @@
             }
         }
     </script>
-  <script type="module" crossorigin src="/assets/main-CaDMfebs.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/main-CoNwrKo_.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-DMlsEHts.css">
+  <script type="module" crossorigin src="/assets/main-DQNTl_Vs.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/main-DECSFEAl.js">
+  <link rel="stylesheet" crossorigin href="/assets/main-uv26Ao_2.css">
 </head>
 
 <body>
