added contact page

--- a/info.html
+++ b/info.html
@@ -50,7 +50,7 @@
                     <p>The main/landing page was built mostly using three.js for the main scene, with the model being <a href="https://sketchfab.com/3d-models/angel-17d22525b4124088a8827d9c45a2627f">just8's "Angel"</a> model lifted from sketchfab, since I really liked the way it looked. Unfortunately, I had to heavily reduce the original quality of the model (from about [PLACE ORIGINAL POLYGON COUNT HERE] to [NEW ONE HERE]). Then I used the ASCII effect in three.js to add a personal touch to it.</p>
                     <p>I found the animation on its own to be a little too boring, so I added the light controls to add some more fun to it. The actual aninimation of the controls menu (the range slider and on/off switch) in and out of the view is done with GSAP, which I heard about before starting this project, so I wanted to try it out for myself.</p>
                     <p>Up next was the menu bar. I wanted to make this look unique yet still fit the theme, and lo and behold, the great Google algorithm saw I was interested in HTML, CSS, and the 'menu bar' keyword, so it decided to recommend me <a href="https://www.youtube.com/watch?v=Jc5fU2_8EE4&t=245s">this</a> video from codegrid, a Youtube channel I had never seen or heard of before. So I incorporated much of his work with some small tweaks to make it fit the theme better. I noticed he was also using GSAP, which was a happy accident and helped me learn a lot more about some use cases for it.</p>
-                    <p>Then came my Projects section...</p>
+                    <p>Then came my Projects section</p>
                 </section>
             </main>
         </body>
