--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="menu-item"><a href="projects.html">projects</a></div>
             <div class="menu-item">art i like</div>
             <div class="menu-item"><a href="info.html">info</a></div>
-            <div class="menu-item">contact</div>
+            <div class="menu-item"><a href="contact.html">contact</a></div>
         </div>
     </div>
 
