changed fonts on pages other than home, added comments for ideas

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
                     <h2>Contact</h2>
                     <p>Email: hajujutuktuk@gmail.com</p>
                     <p>Github: Kizovani</p>
-                    <p>Please email for further details on how to get in touch, as having many personal details on a completely public website seems like a terrible idea for me.</p>
+                    <p>Please email for further details on how to get in touch, as having many personal details on a completely public website seems like a terrible idea.</p>
                 </section>
         
             </main>
