--- a/index.html
+++ b/index.html
@@ -34,6 +34,25 @@
     </div>
 </div>
 
+<div class="basic/advanced-select-container">
+<!-- 
+here will be html that *might* be really similar to the menu-container hmtl, but will be for the user to choose between the "advanced-conntrols-container" and then "basic-controls-container"
+the advanced-conntrols-container will be like a terminal (I might even make this the default cause its so cool), with something like:
+Welcome to the Kizovani website dev console, type "help" or "h" for available commands 
+Kizovani@dev:~$
+the available commands can be:
+1.lighting controls, same as the scroll bar, just with text instead
+2.ambient-light toggle, same as before just with text
+3.model switching - maybe implement a way for a new model to be able to be loaded in, maybe even allowing for model uploads? - How the fuck would I handle that?? Maybe it would all be client side
+4.website color theme switching - allow the user to define two colors to use for the website instead?
+5.three.js ascii effect controls - allow them to set their own resolution, minimum distance, etc
+6.animation controls - pause/play , playback speed, etc
+7. enable the helpers from before
+8. ...
+ -->
+
+</div>
+
     <div class="menu-container">
         <div class="col col-1">
             <div class="menu-item" id="menu-toggle">menu</div>
