added basic/advanced mode toggle button, not working at all yet

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div id="three-js-container"></div>
 
     <div id="open-circle" class="circle"></div>
+    
 <div id="controls-container">
     <div id="close-circle" class="circle"></div>
     <input type="range" id="light-rotation-slider" min="0" max="360" value="0">
@@ -31,6 +32,12 @@
         <label for="ambient-light-off" class="btn">Off</label>
         <input type="radio" id="ambient-light-on" name="ambient-light" value="on" class="toggle toggle-right">
         <label for="ambient-light-on" class="btn">On</label>
+    </div>
+    <div class="button-container">
+        <input type="radio" id="advanced-mode-off" name="advanced-mode" value="off" class="toggle toggle-left" checked>
+        <label for="advanced-mode-off" class="btn">Basic</label>
+        <input type="radio" id="advanced-mode-on" name="advanced-mode" value="on" class="toggle toggle-right">
+        <label for="advanced-mode-on" class="btn">Advanced</label>
     </div>
 </div>
 
