--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!-- TODO: FIGURE OUT PHOTO STORAGE??? -->
+ <!-- epilepsy warning? -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -14,9 +15,9 @@
             }
         }
     </script>
-  <script type="module" crossorigin src="/assets/main-CaDMfebs.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/main-CoNwrKo_.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-DMlsEHts.css">
+  <script type="module" crossorigin src="/assets/main-mD-0IMJa.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/main-DspGy3FZ.js">
+  <link rel="stylesheet" crossorigin href="/assets/main-D45yFEql.css">
 </head>
 
 <body>
@@ -32,6 +33,7 @@
     <div id="three-js-container"></div>
 
     <div id="open-circle" class="circle"></div>
+    
 <div id="controls-container">
     <div id="close-circle" class="circle"></div>
     <input type="range" id="light-rotation-slider" min="0" max="360" value="0">
@@ -41,6 +43,31 @@
         <input type="radio" id="ambient-light-on" name="ambient-light" value="on" class="toggle toggle-right">
         <label for="ambient-light-on" class="btn">On</label>
     </div>
+    <div class="button-container">
+        <input type="radio" id="advanced-mode-off" name="advanced-mode" value="off" class="toggle toggle-left" checked>
+        <label for="advanced-mode-off" class="btn">Basic</label>
+        <input type="radio" id="advanced-mode-on" name="advanced-mode" value="on" class="toggle toggle-right">
+        <label for="advanced-mode-on" class="btn">Advanced</label>
+    </div>
+</div>
+
+<div class="basic/advanced-select-container">
+<!-- 
+here will be html that *might* be really similar to the menu-container hmtl, but will be for the user to choose between the "advanced-conntrols-container" and then "basic-controls-container"
+the advanced-conntrols-container will be like a terminal (I might even make this the default cause its so cool), with something like:
+Welcome to the Kizovani website dev console, type "help" or "h" for available commands 
+Kizovani@dev:~$
+the available commands can be:
+1.lighting controls, same as the scroll bar, just with text instead
+2.ambient-light toggle, same as before just with text
+3.model switching - maybe implement a way for a new model to be able to be loaded in, maybe even allowing for model uploads? - How the fuck would I handle that?? Maybe it would all be client side
+4.website color theme switching - allow the user to define two colors to use for the website instead?
+5.three.js ascii effect controls - allow them to set their own resolution, minimum distance, etc
+6.animation controls - pause/play , playback speed, etc
+7. enable the helpers from before
+8. ...
+ -->
+
 </div>
 
     <div class="menu-container">
@@ -53,7 +80,7 @@
             <div class="menu-item"><a href="projects.html">projects</a></div>
             <div class="menu-item">art i like</div>
             <div class="menu-item"><a href="info.html">info</a></div>
-            <div class="menu-item">contact</div>
+            <div class="menu-item"><a href="contact.html">contact</a></div>
         </div>
     </div>
 
