--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,13 @@
     <title>Kizovani - Projects</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <script type="module" crossorigin src="/assets/main-CoNwrKo_.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/main-DMlsEHts.css">
+  <script type="module" crossorigin src="/assets/projects-BhMqa65J.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/main-DspGy3FZ.js">
+  <link rel="stylesheet" crossorigin href="/assets/main-D45yFEql.css">
 </head>
 <body>
+
+    <canvas id="background-canvas"></canvas>
     
     <div class="welcome-text-container">
         <span class="welcome-text">MY PROJECTS</span>
@@ -63,6 +66,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 </body>
 </html>
