--- a/projects.html
+++ b/projects.html
@@ -5,11 +5,10 @@
 <head>
     <title>Kizovani - Projects</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-
-  <script type="module" crossorigin src="/assets/projects-QL5aU8io.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/main-DECSFEAl.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-uv26Ao_2.css">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <script type="module" crossorigin src="/assets/projects-BhMqa65J.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/main-DspGy3FZ.js">
+  <link rel="stylesheet" crossorigin href="/assets/main-D45yFEql.css">
 </head>
 <body>
 
@@ -67,8 +66,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-
-
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 </body>
 </html>
