slowly adding art page, gallery base layout and text added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ the available commands can be:
             <div class="menu-item" id="close-menu">close</div>
             <div class="menu-item"><a href="index.html">home</a></div>
             <div class="menu-item"><a href="projects.html">projects</a></div>
-            <div class="menu-item">art i like</div>
+            <div class="menu-item"><a href="art.html">art i like</a></div>
             <div class="menu-item"><a href="info.html">info</a></div>
             <div class="menu-item"><a href="contact.html">contact</a></div>
         </div>
