--- a/art.html
+++ b/art.html
@@ -3,22 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="main.css">
     <title>Kizovani - Art</title>
     <style>
        :root {
     --white: #ffffff;
     --black: #000000;
-  }
-  
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    /* overflow: hidden; */
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
   }
 
   @font-face {
@@ -46,99 +36,92 @@ src: url(/res/fonts/Hack-BoldItalic.ttf);
   src: url(/res/fonts/Hack-Bold.ttf);
 }
 
-        body {
-            font-family: "Arame Mono", monospace;
-            line-height: 1.6;
-            color: var(--white);
-            background-color: var(--black);
-            padding: 20px;
-        }
+html, body {
+    width: 100%;
+    height: 100%;
+    font-family: "Hack-Regular";
+}
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
-        .art-gallery {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
-            /* TODO: ITS THIS ONE BELOW */
-            max-width: 1000px;
-            margin: 0 auto;
-        }
+.img-previews {
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 30%;
+    /* might not need this */
+    /* opacity: 0; */
+}
 
-        .art-item {
-            background-color: var(--white);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            /* cursor: pointer; Added for better UX */
-        }
+.img-previews img {
+    width: 600px;
+    height: 700px;
+    padding: 1em 0;
+}
 
-        .art-item img {
-            width: 100%;
-            height: 300px;
-            object-fit: cover;
-            cursor: pointer;
-        }
+.gallery-container {
+    width: 100%;
+    height: 100%;
+    padding-top: 4em;
+}
+/* shouldnt need any gallery-1 stuff */
+.gallery.layout-1-gallery {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform: translateX(0%);
 
-        .art-description {
-            padding: 15px;
-        }
+}
+.gallery.layout-1-gallery .img {
+    position: absolute;
+    width: 100%;
+    height: 125px;
+}
+.gallery.layout-2-gallery {
+    padding-top: 0.5em;
+    position: fixed;
+    top: 25%;
+    left: 10%;
+    transform: translateX(0%);
+}
+.gallery.layout-2-gallery .img {
+    width: 75px;
+    height: 100%;
+    margin-bottom: 1em;
+}
 
-        .art-description h2 {
-            margin-bottom: 10px;
-            color: #333;
-        }
 
-        .art-description p {
-            color: #666;
-        }
-
-        @media (max-width: 768px) {
-            .art-gallery {
-                grid-template-columns: 1fr;
-            }
-        }
-
-        /* New fullscreen styles */
-        .fullscreen-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.9);
-            display: none;
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-        }
-
-        .fullscreen-container.active {
-            display: flex;
-        }
-
-        .fullscreen-image {
-            max-width: 90vw;
-            max-height: 90vh;
-            object-fit: contain;
-        }
-
-        .close-button {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            color: white;
-            font-size: 30px;
-            cursor: pointer;
-            z-index: 1001;
-        }
     </style>
 </head>
 <body>
-    <div class="art-gallery">
+    <div class="gallery-container">
+        <div class="gallery layout-2-gallery">
+            <div class="img" id="img1">
+                <img src="res/art/fallen_angel.jpg" alt="fallen_angel">
+            </div>
+            <div class="img" id="img1">
+                <img src="res/art/Screenshot 2024-12-13 at 22-32-59 PITCH CANKER (@pitchcanker) • Instagram photos and videos.png" alt="wolf">
+            </div>
+
+        </div>
+    </div>
+
+    <div class="minimap"></div>
+
+    <div class="img-previews">
+        <img src="res/art/fallen_angel.jpg" alt="fallen_angel">
+        <img src="res/art/Screenshot 2024-12-13 at 22-32-59 PITCH CANKER (@pitchcanker) • Instagram photos and videos.png" alt="wolf">
+    </div>
+<!-- LEGACY ART GALLERY -->
+    <!-- <div class="art-gallery">
         <div>
             <h1>My Art Collection</h1>
             <p>I really wanted to show off some of the art I've liked over the years, most of these have been either my desktop wallpaper or phone background at one point or another. This page is intented to be the answer to when someone asks me something along the lines of "what kind of art do you like?". All of these works convey a deeper meaning to me, usually revolving around personal life events. I might get one of these tattooed one day. For now just enjoy my little gallery and learn a thing or two about these artists.</p>
         </div>
-        
-        <!-- First Art Item -->
         <div class="art-item">
             <img src="/res/art/Screenshot 2024-12-13 at 22-32-59 PITCH CANKER (@pitchcanker) • Instagram photos and videos.png" alt="Art Piece 1" class="gallery-image">
             <div class="art-description">
@@ -174,16 +157,35 @@ src: url(/res/fonts/Hack-BoldItalic.ttf);
                 </p>
             </div>
         </div>
-
-        <!-- Keep your other art items, just add class="gallery-image" to each img -->
-        <!-- ... other art items ... -->
-    </div>
+    </div> -->
 
     <!-- Fullscreen container -->
-    <div class="fullscreen-container">
+    <!-- <div class="fullscreen-container">
         <div class="close-button">&times;</div>
         <img class="fullscreen-image" alt="Fullscreen view">
+    </div> -->
+
+    <div class="menu-container">
+        <div class="col col-1">
+            <div class="menu-item" id="menu-toggle">menu</div>
+        </div>
+        <div class="col col-2">
+            <div class="menu-item" id="close-menu">close</div>
+            <div class="menu-item"><a href="index.html">home</a></div>
+            <div class="menu-item"><a href="projects.html">projects</a></div>
+            <div class="menu-item">art i like</div>
+            <div class="menu-item"><a href="info.html">info</a></div>
+            <div class="menu-item">contact</div>
+        </div>
     </div>
+    <div class="marquee-container">
+        <div class="marquee">
+            projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script type="module" src="/main.js"></script>
 
     <!-- GSAP Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -201,8 +203,6 @@ src: url(/res/fonts/Hack-BoldItalic.ttf);
         let activeImage = null;
 
         // Function to open fullscreen ITS BROKEN LMFAO
-        //TODO: CURRENTLY, ITS USING CSS PROPERTIES AND JUMPING BETWEEN THEM TO ANIMATE THE FULLSCREEN IMAGE, INSTEAD, WE WANT TO SELECT WHATEVER THE USERCLICKED AND ANIMATE IT TO FULLSCREEN
-        //WITH GSAP
         function openFullscreen(image) {
     // 1. Record the initial state
     const state = Flip.getState(image, {props: "transform"});
