--- a/projects.html
+++ b/projects.html
@@ -6,9 +6,9 @@
     <title>Kizovani - Projects</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <script type="module" crossorigin src="/assets/projects-QL5aU8io.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/main-DECSFEAl.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-uv26Ao_2.css">
+  <script type="module" crossorigin src="/assets/projects-DNoXChV7.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/main-Ch_IRwmz.js">
+  <link rel="stylesheet" crossorigin href="/assets/main-uJhdVNNR.css">
 </head>
 <body>
 
