menu works on all pages now

--- a/info.html
+++ b/info.html
@@ -38,6 +38,10 @@
                     <p>Then came my Projects page, I wasnt sure how I wanted this to look to be honest, but I knew I wanted it to obviously showcase some of the other fun projects I've done and some of the things I've learned along the way.</p>
                     <p>I ended up making those kind of cards you see, they were pretty simple, and done entirely in css although I cant remember the tutorial I followed, otherwise I would have also linked it here</p>
                     <p>Then of course comes the backround monster/worm/centipede thing in the backround, I was actually on instagram when a friend sent me this [INSERT LINK HERE] post, with the caption "you should put this on your website" so thats exactly what I did, apart from changing some starting conditions that code is entirely unaltered and full credits go to [INSERT NAME AND LINK HERE]</p>
+                    <h3>Art Page</h3>
+                    <p>I really wanted to try and make an image gallery of sorts, so I got a bunch of artworks I liked and got to work.</p>
+                    <p>setting up the actual gallery was not that diffucult, I wanted to get some smoother scrolling like I've seen on some other websites, I ended up stumbling upon <a href="https://lenis.darkroom.engineering/">Lenis</a>, which is a lightweight JavaScript library for creating smooth scrolling, I'm not entirely sure I used it to it's full potential but I think it looks better than the default scroll animation nonetheless.</p>
+                    <p>After that, I needed to add something more the the gallery to make it look cooler, it was too bare. While looking around I found another <a href="https://youtu.be/OFTiYCn8c1s?t=39">Codegrid video</a> that used a really cool minimap to show where in the gallery you were. I really loved this concept, I tried my best to emulate it using</p>
                     <h3>Info Page</h3>
                     <p>And then we finally arrive to this very info page, which even though its a bunch of text, was actually alot harder to get working the way I wanted with the baffle.js library (the library that scrambles/animates) the text, for some reason, the baffle effect completely removes links in the text, no clue why, I ended up having to read this entire info page, store it, and then repaste it over the effect when it completes, annoying, but sometimes you have to just make do.</p>
                 </section>
@@ -66,9 +70,9 @@
             <div class="menu-item" id="close-menu">close</div>
             <div class="menu-item"><a href="index.html">home</a></div>
             <div class="menu-item"><a href="projects.html">projects</a></div>
-            <div class="menu-item">art i like</div>
+            <div class="menu-item"><a href="art.html">art i like</a></div>
             <div class="menu-item"><a href="info.html">info</a></div>
-            <div class="menu-item">contact</div>
+            <div class="menu-item"><a href="contact.html">contact</a></div>
         </div>
     </div>
     <div class="marquee-container">
