--- a/projects.html
+++ b/projects.html
@@ -53,9 +53,9 @@
             <div class="menu-item" id="close-menu">close</div>
             <div class="menu-item"><a href="index.html">home</a></div>
             <div class="menu-item"><a href="projects.html">projects</a></div>
-            <div class="menu-item">art i like</div>
+            <div class="menu-item"><a href="art.html">art i like</a></div>
             <div class="menu-item"><a href="info.html">info</a></div>
-            <div class="menu-item">contact</div>
+            <div class="menu-item"><a href="contact.html">contact</a></div>
         </div>
     </div>
     <div class="marquee-container">
