finalizing gallery descriptions and removing test image

--- a/art.html
+++ b/art.html
@@ -262,9 +262,9 @@ img {
             <div class="img" id="img7">
                 <img src="/res/art/I_WILL_NEVER_LET_THIS_FEELING_GO.png" alt="placeholder">
             </div>
-            <div class="img" id="img8">
+            <!-- <div class="img" id="img8">
                 <img src="res/art/TEST.png" alt="placeholder">
-            </div>
+            </div> -->
             <div class="img" id="img9">
                 <img src="res/art/The_Agression_Sessions.png" alt="placeholder">
             </div>
@@ -353,9 +353,6 @@ img {
                     <p class="details">Digital</p></div>
             </div>
         </div>
-        
-        <!-- The image appears to be a surrealist commentary on corporate conformity and the consuming nature of modern business culture, where individuality and humanity are stripped away, leaving only the burning remains of identity in a standardized world. -->
-        <!-- di7ide -->
         <div class="preview-container">
             <img src="res/art/Melencolia.png" alt="">
             <div class="text-overlay">
@@ -384,9 +381,15 @@ img {
                     <p class="details">Digital</p></div>
                 </div>
         </div>
-        <img src="res/art/TEST.png" alt="">
-        <img src="res/art/The_Agression_Sessions.png" alt="">
-
+        <!-- <img src="res/art/TEST.png" alt=""> -->
+         <div class="preview-container">
+            <img src="res/art/The_Agression_Sessions.png" alt="">
+            <div class="text-overlay">
+                <div class="overlay-text">
+                    <h2>The Agression Sessions</h2>
+                    <p class="subtitle">Eliran Kantor</p>
+                    <p class="details">figures locked in a violent embrace that speaks to humanity's ancient battle with nature</p>
+         </div>
     </div>
 
     <div class="menu-container">
