up to date with main

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             }
         }
     </script>
-  <script type="module" crossorigin src="/assets/main-mD-0IMJa.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/main-DspGy3FZ.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-D45yFEql.css">
+  <script type="module" crossorigin src="/assets/main-BK-m9dCu.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/main-Ch_IRwmz.js">
+  <link rel="stylesheet" crossorigin href="/assets/main-uJhdVNNR.css">
 </head>
 
 <body>
@@ -78,7 +78,7 @@ the available commands can be:
             <div class="menu-item" id="close-menu">close</div>
             <div class="menu-item"><a href="index.html">home</a></div>
             <div class="menu-item"><a href="projects.html">projects</a></div>
-            <div class="menu-item">art i like</div>
+            <div class="menu-item"><a href="art.html">art i like</a></div>
             <div class="menu-item"><a href="info.html">info</a></div>
             <div class="menu-item"><a href="contact.html">contact</a></div>
         </div>
