--- a/projects.html
+++ b/projects.html
@@ -6,9 +6,9 @@
     <title>Kizovani - Projects</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <script type="module" crossorigin src="/assets/projects-BhMqa65J.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/main-DspGy3FZ.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-D45yFEql.css">
+  <script type="module" crossorigin src="/assets/projects-DNoXChV7.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/main-Ch_IRwmz.js">
+  <link rel="stylesheet" crossorigin href="/assets/main-uJhdVNNR.css">
 </head>
 <body>
 
@@ -55,9 +55,9 @@
             <div class="menu-item" id="close-menu">close</div>
             <div class="menu-item"><a href="index.html">home</a></div>
             <div class="menu-item"><a href="projects.html">projects</a></div>
-            <div class="menu-item">art i like</div>
+            <div class="menu-item"><a href="art.html">art i like</a></div>
             <div class="menu-item"><a href="info.html">info</a></div>
-            <div class="menu-item">contact</div>
+            <div class="menu-item"><a href="contact.html">contact</a></div>
         </div>
     </div>
     <div class="marquee-container">
