up to date with main - art page menu position fixed

--- a/art.html
+++ b/art.html
@@ -389,8 +389,10 @@ img {
                 <div class="overlay-text">
                     <h2>The Agression Sessions</h2>
                     <p class="subtitle">Eliran Kantor</p>
-                    <p class="details">figures locked in a violent embrace that speaks to humanity's ancient battle with nature</p>
-         </div>
+                    <p class="details">figures locked in a violent embrace that speaks to humanity's ancient battle with nature</p></div>
+            </div>
+        </div>
+
     </div>
 
     <div class="menu-container">
