added framemonkey icon

--- a/projects.html
+++ b/projects.html
@@ -11,10 +11,16 @@
 <body>
 
     <canvas id="background-canvas"></canvas>
+
+    <div class="animal-names-banner">
+        <p>Now with more animal names!</p>
+    </div>
     
     <div class="welcome-text-container">
-        <span class="welcome-text">MY PROJECTS</span>
+        <span class="welcome-text">X?/%6@</span>
     </div>
+    
+
 
     <div id="projects-container">
         <!-- Project cards will go here -->
@@ -33,10 +39,22 @@
         <div class="project-card">
             <img class="traypanda-icon" src="/res/icons/bamboo-canes.png" alt="TrayPanda Icon">
             <h2>TrayPanda</h2>
-            <p> Python based windows tray app with many small included tools, including a 20-20-20 timer, ipconfig info tool, and more</p>
+            <p>Python based windows tray app with many small included tools, including a 20-20-20 timer, ipconfig info tool, and more</p>
             <div class="popup">
                 <p class = "github-link">
                     <a href="https://github.com/Kizovani/TrayPanda" target ="_blank">Github</a>
+                    <ion-icon name="link-outline"></ion-icon>
+                </p>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img class="framemonkey-icon" src="/res/icons/FrameMonkey_Icon_Transparent_Blacked.PNG" alt="FrameMonkey Icon">
+            <h2>FrameMonkey</h2>
+            <p>Windows Context menu and standalone application to quickly trim and compress videos, using python, powershell and ffmpeg</p>
+            <div class="popup">
+                <p class = "github-link">
+                    <a href="https://github.com/oelbaytam/FrameMonkey" target ="_blank">Github</a>
                     <ion-icon name="link-outline"></ion-icon>
                 </p>
             </div>
